...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome back!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dsX-6Y-X59">
                                <rect key="frame" x="16" y="280" width="361" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_lbl_welcome"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                <nil key="textColor"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your email" textAlignment="natural" minimumFontSize="17" sizingRule="oversize" translatesAutoresizingMaskIntoConstraints="NO" id="GHl-mI-L95">
                                        <rect key="frame" x="0.0" y="36.333333333333314" width="361" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_tf_email"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="4lR-kr-VNi"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter you password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RLk-Og-j0e">
                                        <rect key="frame" x="0.0" y="132.66666666666663" width="361" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_tf_password"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="dqI-MB-nqL"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2nF-c8-aWW">
                                <rect key="frame" x="16" y="582.66666666666663" width="361" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="login_btn_submit"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="2nF-c8-aWW" secondAttribute="height" multiplier="361:50" id="37U-wA-9tG"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="imM-KS-KKa">
                                        <rect key="frame" x="0.0" y="0.0" width="129" height="32"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_btn_signup_nav"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Create account">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CM8-A3-Qi8">
                                        <rect key="frame" x="203.33333333333337" y="0.0" width="157.66666666666663" height="32"/>
                                        <accessibility key="accessibilityConfiguration" identifier="login_btn_rp_nav"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Recovery password">
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresa tu nombre completo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gON-dl-pvg" propertyAccessControl="all">
                                        <rect key="frame" x="0.0" y="36.333333333333343" width="361" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signup_tf_names"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="Gel-vO-LZg"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" restorationIdentifier="lastNameSignup" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresa tus apellidos" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SmQ-jT-eNP">
                                        <rect key="frame" x="0.0" y="132.66666666666666" width="361" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signup_tf_last_name"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="sqH-ha-P9f"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" restorationIdentifier="emailSignup" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresa tu correo electrónico" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2zB-z1-vfo">
                                        <rect key="frame" x="0.0" y="229" width="361" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signup_tf_email"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="du7-Jg-ixA"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" restorationIdentifier="passwordSignup" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ingresa tu contraseña" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RnR-9k-hEa">
                                        <rect key="frame" x="0.0" y="325.33333333333331" width="361" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="signup_tf_password"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="kJA-Px-nly"/>
...
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="createAccountButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XHs-QU-rz3">
                                <rect key="frame" x="16" y="539.66666666666663" width="361" height="50"/>
